--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grunt-demo-1",
   "version": "0.1.0",
   "devDependencies": {
-
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0"
   }
 }
